k8s/back-for-front/back-for-front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-for-front
  namespace: trabalho-microsservico
  labels:
    app: back-for-front
spec:
  replicas: 2
  selector:
    matchLabels:
      app: back-for-front
  template:
    metadata:
      labels:
        app: back-for-front
    spec:
      containers:
        - name: back-for-front
          image: trabalho/back-for-front:local
          imagePullPolicy: Never
          ports:
            - containerPort: 3003
          readinessProbe:
            httpGet:
              path: /
              port: 3003
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3003
            initialDelaySeconds: 20
            periodSeconds: 15
