k8s/back-for-front/back-for-front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-for-front
  namespace: trabalho-microsservico
  labels:
    app: back-for-front
spec:
  type: ClusterIP
  selector:
    app: back-for-front
  ports:
    - name: http
      port: 3003
      targetPort: 3003
