k8s/back-for-front/back-for-front-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: back-for-front-ingress
  namespace: trabalho-microsservico
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: bff.trabalho.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: back-for-front
                port:
                  number: 3003
